--- a/Solution2/css/scrollDownButton.css
+++ b/Solution2/css/scrollDownButton.css
@@ -6,14 +6,15 @@
     display: inline-block;
     -webkit-transform: translate(0, -50%);
     transform: translate(0, -50%);
-    color: #fff;
     padding-top: 60px;
-    font-size: 12px;
-    color: #000;
-    font-weight: 1000;
     letter-spacing: .1em;
     text-decoration: none;
     transition: opacity .3s;
+
+    font-family: 'Source Sans Pro';
+    font-weight: bolder;
+    color: #000;
+    font-size: 12px;
   }
 
   #scroll-down-link a:hover {
@@ -31,11 +32,13 @@
     border-radius: 50px;
     box-sizing: border-box;
     border-color: #000;
+    transition: transform .3s ease-out;
   }
 
   #scroll-down-link a:hover span {
     position: absolute;
-    top: -10px;
+    transform: translate(0, -5px);
+    /* top: -10px; */
   }
 
   #scroll-down-link a span::before {
